--- a/social/src/main/resources/application.properties
+++ b/social/src/main/resources/application.properties
@@ -1,10 +1,14 @@
+#SQL
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=alisher2003
 spring.datasource.url=jdbc:postgresql://localhost:5432/social
-
-
+#JPA
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
+#JWT
 jwt_secret = SECRET
+
+#DIRECTION TO IMAGES
