--- a/social/src/main/resources/application.properties
+++ b/social/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
 #JWT
 jwt_secret = SECRET
-
+spring.servlet.multipart.enabled=true
 #DIRECTION TO IMAGES
